# bno055_rust

./: .envrc  Cargo.toml  Makefile  NIX.md  README.md  flake.nix  memory.x
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: cjw9rcchw02hq5i18yrf9b2vh7pr4cwg-source
src/: main.rs
